Повышена производительность сервера. Исправлены баги меню.